k8s/kafka.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka
  labels:
    app: kafka
spec:
  selector:
    app: kafka
  ports:
  - port: 9092
    protocol: TCP
    targetPort: 9092
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kafka
  labels:
    app: kafka
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      containers:
      - name: kafka
        image: "apache/kafka:latest"
        resources:
          requests:
            cpu: 1000m
            memory: 1024Mi
          limits:
            cpu: 1000m
            memory: 2048Mi
        ports:
        - containerPort: 9092
        - containerPort: 9093
        volumeMounts:
            - name: kafka-storage
              mountPath: /mnt/kafka
      volumes:
        - name: kafka-storage
          persistentVolumeClaim:
            claimName: kafka-claim
