k8s/redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  labels:
    app: redis
spec:
  selector:
    app: redis
  ports:
  - port: 6379
    protocol: TCP
    targetPort: 6379
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  labels:
    app: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: "redis/redis-stack-server:latest"
        resources:
          requests:
            cpu: 2000m
            memory: 512Mi
          limits:
            cpu: 2000m
            memory: 1024Mi
        ports:
        - containerPort: 6379
