k8s/server_notify.yaml
apiVersion: v1
kind: Service
metadata:
  name: market-notify
  labels:
    app: market-notify
spec:
  selector:
    app: market-notify
  ports:
  - port: 8001
    protocol: TCP
    targetPort: 8001
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: market-notify
  labels:
    app: market-notify
spec:
  replicas: 1
  selector:
    matchLabels:
      app: market-notify
  template:
    metadata:
      labels:
        app: market-notify
    spec:
      containers:
      - name: market-notify
        image: "market/notify:latest"
        imagePullPolicy: Never
        resources:
          requests:
            cpu: 1000m
            memory: 128Mi
          limits:
            cpu: 1000m
            memory: 128Mi
        ports:
        - containerPort: 8001
        workingDir: /app/bin
        volumeMounts:
        - name: config-volume
          mountPath: /app/bin/config
          readOnly: true
      volumes:
      - name: config-volume
        configMap:
          name: server-config
          items:
          - key: "config.toml"
            path: "config.toml"
