k8s/server_order.yaml
apiVersion: v1
kind: Service
metadata:
  name: market-order
  labels:
    app: market-order
spec:
  selector:
    app: market-order
  ports:
  - port: 8000
    protocol: TCP
    targetPort: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: market-order
  labels:
    app: market-order
spec:
  replicas: 1
  selector:
    matchLabels:
      app: market-order
  template:
    metadata:
      labels:
        app: market-order
    spec:
      containers:
      - name: market-order
        image: "market/order:latest"
        imagePullPolicy: Never
        resources:
          requests:
            cpu: 1000m
            memory: 128Mi
          limits:
            cpu: 1000m
            memory: 128Mi
        ports:
        - containerPort: 8000
        workingDir: /app/bin
        volumeMounts:
        - name: config-volume
          mountPath: /app/bin/config
          readOnly: true
      volumes:
      - name: config-volume
        configMap:
          name: server-config
          items:
          - key: "config.toml"
            path: "config.toml"
